# UCP-Integrador-2025

./: .gitignore  README.md  admin.py  consigna.txt  env.example  logistica.py  main.py  pyproject.toml  usuario.py
data/: conductores.json  multas.json  pedidos.json  productos.json
datums/: conductor.py  pedido.py  ruta.py  vehiculos.py
