[project]
name = "ucp-integrador-2025"
version = "0.1.0"
description = "UCP Integrador 2025 Project"
requires-python = ">=3.8"
dependencies = [
    "tkintermapview>=1.29",
    "geopy>=2.4.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 