[project]
name = "ucp-integrador-2025"
version = "0.1.0"
description = "Calculadora de logística para optimización de rutas y costos"
dependencies = [
    "tkinter",
    "tkintermapview>=1.22",
    "geopy>=2.3.0",
    "requests>=2.0.0",
    "googlemaps>=4.10.0",
    "matplotlib>=3.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 